# rag-chatbot

./: README.md  chatbot_project_presentation.pptx  pyproject.toml  ragchatbot.py  ragchatbot_technical_details.md
chatbot.egg-info/: SOURCES.txt  top_level.txt
src/chatbot/: __init__.py  __main__.py  chatbot.py
src/chatbot.egg-info/: PKG-INFO  SOURCES.txt
