[project]
name = "chatbot"
version = "0.1.0"
description = "Starter chatbot Python project"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name" }]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

